[gd_scene load_steps=4 format=3 uid="uid://b4edtiuiujfgs"]

[ext_resource type="StyleBox" uid="uid://dtbi1sq0ahxe" path="res://assets/art/ui/pink_button_style.tres" id="1_7hpt8"]
[ext_resource type="Script" path="res://scripts/level_end_screen.gd" id="1_lv8ne"]
[ext_resource type="AudioStream" uid="uid://yjpk64j1vlgf" path="res://assets/audio/sfx/icy_win.wav" id="3_gslse"]

[node name="LevelEndScreen" type="Control" node_paths=PackedStringArray("label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lv8ne")
label = NodePath("MarginContainer/HBoxContainer/Label")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "New personal best!"

[node name="again" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(115, 25)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_7hpt8")
text = "Again!"

[node name="next_level" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 25)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_7hpt8")
text = "Next Level"

[node name="IcyWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gslse")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/again" to="." method="_on_again_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/next_level" to="." method="_on_next_level_pressed"]
